sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:12: error: illegal start of simple expression
		if (	swapped == false );
                                          ^